# Project_GP1

./: .gitignore  README.md  install_all.sh  requirements.txt
config/: lekiwi_3cam.yaml  lerobot_config.yaml  real_params.yaml  rl_config.yaml  ros_config.yaml  sim_params.yaml  unity_config.json  vr_params.yaml
config/robots/: franka_panda.yaml  universal_robots_ur5.yaml
docs/: LEKIWI_VR_GUIDE.md  QUICK_START.md  SETUP_SUMMARY.md  TROUBLESHOOTING.md  UBUNTU_SETUP_GUIDE.md  VR_SETUP_GUIDE.md  WORKFLOW_GUIDE.md  setup_guide.md  usage_guide.md
ros_ws/src/so101_bringup/: package.xml  setup.py
ros_ws/src/so101_bringup/launch/: real.launch.py
ros_ws/src/so101_bringup/so101_bringup/: hardware_interface.py
ros_ws/src/so101_camera/: package.xml  setup.py
ros_ws/src/so101_camera/launch/: camera.launch.py
ros_ws/src/so101_camera/so101_camera/: usb_camera_publisher.py
ros_ws/src/so101_lerobot/: __init__.py  package.xml  setup.py
ros_ws/src/so101_lerobot/lerobot/: __init__.py  config_loader.py  control_interface.py  control_robot.py  factories.py  hil_serl_trainer.py  intervention_handler.py  robot_interface.py  simple_rl_trainer.py  train.py
ros_ws/src/so101_lerobot/lerobot/control/: __init__.py  gamepad_control.py  keyboard_control.py  leader_follower_control.py  vr_control.py
ros_ws/src/so101_lerobot/lerobot/robots/: __init__.py  franka_interface.py  so101_interface.py  ur5_interface.py
ros_ws/src/so101_lerobot/lerobot/simulation/: isaac_sim_interface.py
ros_ws/src/so101_lerobot/resource/: lerobot
ros_ws/src/so101_sim/: CMakeLists.txt  package.xml
ros_ws/src/so101_sim/config/: controllers.yaml  so101.rviz
ros_ws/src/so101_sim/launch/: sim_launch.py
ros_ws/src/so101_sim/urdf/: so101_dual.urdf.xacro
ros_ws/src/so101_sim/worlds/: so101_world.world
ros_ws/src/so101_teleop_vr/: package.xml  setup.py
ros_ws/src/so101_teleop_vr/resource/: so101_teleop_vr
ros_ws/src/so101_teleop_vr/so101_teleop_vr/: cartesian_commander.py  data_recorder.py  leader_follower_commander.py
scripts/: convert_mesh_to_world.py  convert_to_lerobot.py  deploy_policy.py  deploy_policy.sh  start_full_pipeline.py  start_leader_follower_teleop.py  start_rl_training.py  start_simple_rl_training.py  start_simulation.py  start_teleop.py  start_training.py  start_vr_teleop.py  verify_installation.py  verify_vr_setup.py  visualize_data.py
setup/: install_system.py  setup_conda_ml_env.sh  setup_workspace.py
unity/: .gitignore
unity/Assets/Scripts/: RecControlPublisher.cs  TeleopPublisher.cs
